--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   </head>
   <body>
 	  <script src="https://cdn.jsdelivr.net/npm/ol/dist/ol.js"></script>
+	  <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+<script>eruda.init();</script>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
